[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/screen/arcadewin.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg/grid_scroll.png" type="Texture" id=2]
[ext_resource path="res://graphics/ui/transition.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/select/char/preview.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/font/pixel_intv.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/ui/menu/button.tscn" type="PackedScene" id=6]

[node name="arcadewin" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="bg_grid" type="Sprite" parent="."]
z_index = -4000
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="transition" type="Sprite" parent="."]
visible = false
z_index = 4000
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="preview_player1" parent="." instance=ExtResource( 4 )]
position = Vector2( -58, -6 )

[node name="labels" type="Node2D" parent="."]
z_index = -1

[node name="label_congrats" type="Label" parent="labels"]
margin_left = -54.0
margin_top = -61.0
margin_right = 54.0
margin_bottom = -47.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.72549, 0.313726, 0.584314, 1 )
text = "CONGRATULATIONS!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_time" type="Label" parent="labels"]
margin_left = -9.0
margin_top = -26.0
margin_right = 118.0
margin_bottom = -12.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.705882, 0.333333, 0.584314, 1 )
text = "99:59"
align = 1

[node name="label_time2" type="Label" parent="labels/label_time"]
margin_top = -10.0
margin_right = 127.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.705882, 0.333333, 0.584314, 1 )
text = "Completion time:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_unlock" type="Label" parent="labels"]
margin_left = -9.0
margin_top = -11.0
margin_right = 118.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.705882, 0.333333, 0.584314, 1 )
custom_constants/line_spacing = -3
text = "Shoto Goto
Color 4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_unlock2" type="Label" parent="labels/label_unlock"]
margin_top = 20.0
margin_right = 127.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.705882, 0.333333, 0.584314, 1 )
text = "unlocked!"
align = 1

[node name="button_ok" parent="." instance=ExtResource( 6 )]
position = Vector2( 54, 38 )
text = "OK"
